[project]
name = "noqx"
version = "0.5.0"
description = "Extended logic puzzle solver of Noq."
authors = [
  {name = "Yaoyu Zhu"},
  {name = "Tony Xiang"},
]
readme = "README.md"
license = {text = "Apache-2.0 OR GPL-3.0-or-later"}
keywords = ["solver", "clingo", "logic puzzle"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "clingo<6,>=5.6.2",
  "loguru<1,>=0.7.0",

]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/T0nyX1ang/noqx"
repository = "https://github.com/T0nyX1ang/noqx.git"
issues = "https://github.com/T0nyX1ang/noqx/issues"

[project.optional-dependencies]
web = [
  "starlette<0.30.0; python_version<'3.8'",
  "starlette<1,>=0.30.0; python_version>='3.8'",
  "uvicorn<0.23.0; python_version<'3.8'",
  "uvicorn<1,>=0.23.0,!=0.29.0; python_version>='3.8'",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["noqx", "noqx.rule"]

[tool.black]
line-length = 127
target-version = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 127
target-version = "py37"

[tool.ruff.lint]
select = ["I"]

[tool.pylint]
disable = ["invalid-unary-operand-type", "invalid-name", "unspecified-encoding", "logging-fstring-interpolation", "line-too-long"]

[tool.pyright]
pythonVersion = "3.7"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportAttributeAccessIssue = false

[tool.uv]
package = false
dev-dependencies = [
  "black<23.7.0; python_version<'3.8'",
  "black>=23.7.0; python_version>='3.8'",
  "conventional-pre-commit<2.5.0; python_version<'3.8'",
  "conventional-pre-commit>=2.5.0; python_version>='3.8'",
  "coverage>=7.0.0",
  "pre-commit<2.22.0; python_version<'3.8'",
  "pre-commit>=2.22.0; python_version>='3.8'",
  "pyinstaller>=5.5,<6",
  "pylint<2.14.0; python_version<'3.8'",
  "pylint>=2.14.0; python_version>='3.8'",
  "ruff>=0.6.8",
]
