[project]
name = "noqx"
version = "0.7.2"
description = "Extended logic puzzle solver of Noq."
authors = [
  {name = "Tony Xiang"},
  {name = "Yaoyu Zhu"},
]
readme = "README.md"
license = "Apache-2.0 OR GPL-3.0-or-later"
keywords = ["solver", "clingo", "logic puzzle"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "clingo>=5.6",
  "cffi>=1.15.0; python_version<'3.9'",
  "cffi>=1.17.0; python_version>='3.9'",
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/T0nyX1ang/noqx"
repository = "https://github.com/T0nyX1ang/noqx.git"
issues = "https://github.com/T0nyX1ang/noqx/issues"

[project.optional-dependencies]
web = [
  "starlette<0.49.1; python_version<'3.9'",
  "starlette<1,>=0.49.1; python_version>='3.9'",
  "uvicorn<0.23.0; python_version<'3.9'",
  "uvicorn<1,>=0.23.0,!=0.29.0; python_version>='3.9'",
]

docs = [
  "mkdocs<2,>=1.5.0",
  "mkdocs-material<10,>=9.2.0",
  "mkdocstrings-python<2,>=1.12.0; python_version>='3.9'",
  "mkdocstrings-python>=1.0.0,<1.12.0; python_version<'3.9'",
]

[dependency-groups]
dev = [
  "black<23.7.0; python_version<'3.9'",
  "black>=23.7.0; python_version>='3.9'",
  "conventional-pre-commit<2.5.0; python_version<'3.9'",
  "conventional-pre-commit>=2.5.0; python_version>='3.9'",
  "coverage>=7.0.0",
  "pre-commit<2.22.0; python_version<'3.9'",
  "pre-commit>=2.22.0; python_version>='3.9'",
  "pylint<2.14.0; python_version<'3.9'",
  "pylint>=2.14.0; python_version>='3.9'",
  "ruff>=0.6.8",
  "python-minifier>=2.11.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["noqx", "noqx.puzzle", "noqx.rule"]

[tool.black]
line-length = 127
target-version = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 127
target-version = "py37"

[tool.ruff.lint]
select = ["I"]

[tool.pylint]
disable = ["invalid-unary-operand-type", "invalid-name", "unspecified-encoding", "logging-fstring-interpolation", "line-too-long"]

[tool.pyright]
pythonVersion = "3.7"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportAttributeAccessIssue = false

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "main.py",
  "main_deploy.py",
]

[tool.uv]
package = false
